objects/nFORCE__Data_Snapshot__c.object
<CustomObject>
    <description>This object stores information related to data snapshot.</description>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>The system automatically populates this required field when the invocable method is called. This field stores the ID of the object included in the snapshot.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen_Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Users populate this required lookup field with the screen section that is used to snapshot data. The screen section determines which objects and fields the system displays when the nFORCE_CreateDataSnapshotInvocable invocable method is initiated.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Data Snapshots</relationshipLabel>
        <relationshipName>Data_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Snapshot_DateTime__c</fullName>
        <description>The system automatically populates this required field when the invocable method is called. This field stores the date and time in which the snapshot was requested.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Snapshot DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Snapshot_Description__c</fullName>
        <description>Administrators populate this optional text field with the business process that initiates the snapshot. The field values appear in the Date/Time picklist on the Snapshot Visualforce page.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Snapshot Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Snapshot_Lookup_Key__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>--DEPRECATED--</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>-D lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Snapshot</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>